add @Get("/{cacheName}/keys"), warning clean up